force-app/main/default/objects/Case/fields/Account_Record_Type_ID_Case__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type_ID_Case__c</fullName>
    <description>Return the Record Type ID of the associated Account Record.</description>
    <formula>Account.RecordType.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Return the Record Type ID of the associated Account Record.</inlineHelpText>
    <label>Account Record Type ID</label>
    <type>Text</type>
</CustomField>