force-app/main/default/objects/Case/fields/Activating_Brand__c.field-meta.xml
<CustomField>
    <fullName>Activating_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activating Brand</label>
    <referenceTo>Village_Presence__c</referenceTo>
    <relationshipLabel>Activating Brands</relationshipLabel>
    <relationshipName>Activating_Brands</relationshipName>
    <type>Lookup</type>
</CustomField>