force-app/main/default/objects/Case/fields/Client_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>Client_QR_Code__c</fullName>
    <description>This is the codification of the QR Code previously associated to the client.</description>
    <externalId>true</externalId>
    <label>Client QR Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>