force-app/main/default/objects/Case/fields/Country_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Residence__c</fullName>
    <label>Country of Residence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>