force-app/main/default/objects/Case/fields/Dwell_Time__c.field-meta.xml
<CustomField>
    <fullName>Dwell_Time__c</fullName>
    <description>Dwell time. difference between Registration start and end times in seconds</description>
    <formula>NULLVALUE(( ClosedDate - CreatedDate )*24, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time in seconds</inlineHelpText>
    <label>Dwell Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>