force-app/main/default/objects/Case/fields/Experience_Close__c.field-meta.xml
<CustomField>
    <fullName>Experience_Close__c</fullName>
    <label>Experience Close</label>
    <type>DateTime</type>
</CustomField>