force-app/main/default/objects/Case/fields/Experience_Start__c.field-meta.xml
<CustomField>
    <fullName>Experience_Start__c</fullName>
    <label>Experience Start</label>
    <type>DateTime</type>
</CustomField>