force-app/main/default/objects/Case/fields/Guest_30_minutes__c.field-meta.xml
<CustomField>
    <fullName>Guest_30_minutes__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The guest will arrive in 30 minutes</inlineHelpText>
    <label>Guest 30 minutes</label>
    <type>Checkbox</type>
</CustomField>