force-app/main/default/objects/Case/fields/Guest_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Guest_Arrival_Time__c</fullName>
    <description>Used to show time only on &quot;priority flag&quot; field on the job...</description>
    <formula>TIMEVALUE(Guest_Arrive_at_Collection_Point__c) +  $User.UserTimezoneOffset__c * 3600000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Arrival Time</label>
    <type>Time</type>
</CustomField>