force-app/main/default/objects/Case/fields/Guest_Arrive_at_Collection_Point__c.field-meta.xml
<CustomField>
    <fullName>Guest_Arrive_at_Collection_Point__c</fullName>
    <description>Guest Arrive to the Collection Point. Indicates the hour (now) + 30 minutes indicated by Guest when he calls to inform that will be at CP in 30 minutes.</description>
    <label>Guest Arrive at Collection Point</label>
    <type>DateTime</type>
</CustomField>