force-app/main/default/objects/Case/fields/Guest_Collection_Point_has_changed__c.field-meta.xml
<CustomField>
    <fullName>Guest_Collection_Point_has_changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guest Collection Point has changed</label>
    <type>Checkbox</type>
</CustomField>