force-app/main/default/objects/Case/fields/Guest_ID_Number_Part__c.field-meta.xml
<CustomField>
    <fullName>Guest_ID_Number_Part__c</fullName>
    <description>the number portion of the guest ID. for use with getting an increment</description>
    <inlineHelpText>the number portion of the guest ID. for use with getting an increment</inlineHelpText>
    <label>Guest ID Number Part</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>