force-app/main/default/objects/Case/fields/Guest_Type__c.field-meta.xml
<CustomField>
    <fullName>Guest_Type__c</fullName>
    <label>Guest Type</label>
    <length>75</length>
    <type>Text</type>
</CustomField>