force-app/main/default/objects/Case/fields/HFS_Call_Collect_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>HFS_Call_Collect_Brand_Name__c</fullName>
    <description>Stores the Brand Name for the Call and Collect Service. Used mostly for reporting purposes but also in the Email that is sent after the Call &amp; Collect registration is done</description>
    <label>Call Collect Brand Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>