force-app/main/default/objects/Case/fields/HFS_Case_Count__c.field-meta.xml
<CustomField>
    <fullName>HFS_Case_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HFS Case Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>