force-app/main/default/objects/Case/fields/HFS_Click_And_Collect__c.field-meta.xml
<CustomField>
    <fullName>HFS_Click_And_Collect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the HFS Case corresponds to a Click &amp; Collect Experience</description>
    <label>Click &amp; Collect</label>
    <type>Checkbox</type>
</CustomField>