force-app/main/default/objects/Case/fields/HFS_Code_Changed__c.field-meta.xml
<CustomField>
    <fullName>HFS_Code_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field that indicates that the Guest Code for the HFS Experience have been changed by the Lost Code functionality</description>
    <label>HFS Code Changed</label>
    <type>Checkbox</type>
</CustomField>