force-app/main/default/objects/Case/fields/HFS_Collection_Count__c.field-meta.xml
<CustomField>
    <fullName>HFS_Collection_Count__c</fullName>
    <label>HFS Collection Count</label>
    <summaryForeignKey>Case_Item__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>