force-app/main/default/objects/Case/fields/HFS_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>HFS_Collection_Date__c</fullName>
    <description>Created for the Click &amp; Collect functionality. Represents the collection date indicated by the User.</description>
    <label>Collection Date</label>
    <type>Date</type>
</CustomField>