force-app/main/default/objects/Case/fields/HFS_Collection_Location__c.field-meta.xml
<CustomField>
    <fullName>HFS_Collection_Location__c</fullName>
    <description>The collection location of the Service</description>
    <inlineHelpText>The collection location of the Service</inlineHelpText>
    <label>HFS Collection Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>