force-app/main/default/objects/Case/fields/HFS_Dwell_Time__c.field-meta.xml
<CustomField>
    <fullName>HFS_Dwell_Time__c</fullName>
    <description>Dwell time in time format for reporting purposes (requested by La Vallée)</description>
    <formula>IF(
  Experience_Close__c - Experience_Start__c &gt; 0 ,
  TEXT( FLOOR( MOD( (Experience_Close__c - Experience_Start__c ) * 24, 24 ) ) ) &amp; &quot; h &quot;
  &amp; TEXT( ROUND( MOD( (Experience_Close__c - Experience_Start__c ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; min&quot;,
  &quot;&quot;
)</formula>
    <label>Dwell Time</label>
    <type>Text</type>
</CustomField>