force-app/main/default/objects/Case/fields/HFS_Guest_Account__c.field-meta.xml
<CustomField>
    <fullName>HFS_Guest_Account__c</fullName>
    <description>Displays information about the Record Type of the Account for reporting purposes</description>
    <formula>IF(Account.RecordType.DeveloperName = &apos;VIP_Guest&apos;,
			&apos;VIP Guest&apos;, 
			IF (Account.RecordType.DeveloperName = &apos;Guest&apos;,
							&apos;Privilege Guest&apos;,
			    &apos;Non Privilege Guest&apos;
			)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Account</label>
    <type>Text</type>
</CustomField>