force-app/main/default/objects/Case/fields/HFS_Guest_Residency__c.field-meta.xml
<CustomField>
    <fullName>HFS_Guest_Residency__c</fullName>
    <description>Formula Fields with reporting purposes. Displays International or Local at HFS Case</description>
    <formula>IF( Country_of_Residence__c = TEXT(Village__r.HFS_Country_of_Village__c), &apos;Domestic (Local)&apos;,&apos;International&apos;)</formula>
    <label>Guest Residency</label>
    <type>Text</type>
</CustomField>