force-app/main/default/objects/Case/fields/HFS_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>HFS_Last_Name__c</fullName>
    <description>Field to store the First Name when an HFS Case is registered. The SuppliedName stores at this moment the Salutation + First Name + Last Name and a First Name separated field is required to preload HFS Experiences values when registering from the Black Book</description>
    <label>Display Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>