force-app/main/default/objects/Case/fields/HFS_Leaflet_Type__c.field-meta.xml
<CustomField>
    <fullName>HFS_Leaflet_Type__c</fullName>
    <label>HFS Leaflet Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Privilege Guest</fullName>
            </value>
            <value>
                <fullName>Privilege Guest</fullName>
            </value>
            <value>
                <fullName>leafletCode</fullName>
                <default>true</default>
                <label>Leaflet with DM Code</label>
            </value>
            <value>
                <fullName>privilegeCode</fullName>
                <label>Privilege QR Code Scan</label>
            </value>
            <value>
                <fullName>qrCode</fullName>
                <label>Leaflet QR Code Scan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>