force-app/main/default/objects/Case/fields/HFS_Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>HFS_Marketing_Campaign__c</fullName>
    <description>The marketing campaign that trace the visit of the guest</description>
    <label>HFS Marketing Campaign</label>
    <length>100</length>
    <type>Text</type>
</CustomField>