force-app/main/default/objects/Case/fields/HFS_Paid_or_Offered__c.field-meta.xml
<CustomField>
    <fullName>HFS_Paid_or_Offered__c</fullName>
    <description>For reporting purposes, mapping the values for Payment Status to OFFERED or PAID</description>
    <formula>IF(CONTAINS(UPPER(TEXT(Payment_Status__c)),&apos;FREE OF CHARGE&apos;),&apos;OFFERED&apos;,&apos;PAID&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid or Offered</label>
    <type>Text</type>
</CustomField>