force-app/main/default/objects/Case/fields/HFS_Person_Registering__c.field-meta.xml
<CustomField>
    <fullName>HFS_Person_Registering__c</fullName>
    <description>Records the GSA/Person who performed the HFS Registration</description>
    <label>Person Registering the Guest</label>
    <length>80</length>
    <type>Text</type>
</CustomField>