force-app/main/default/objects/Case/fields/HFS_Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>HFS_Promo_Code__c</fullName>
    <description>Promo Code for the HFS Registration</description>
    <label>Promo Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>