force-app/main/default/objects/Case/fields/HFS_Registration_Location__c.field-meta.xml
<CustomField>
    <fullName>HFS_Registration_Location__c</fullName>
    <description>Stores the registration location where the HFS Case registration was performed</description>
    <label>Registration Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>