force-app/main/default/objects/Case/fields/HFS_Transport_Converted__c.field-meta.xml
<CustomField>
    <fullName>HFS_Transport_Converted__c</fullName>
    <description>Report purposes. Changing the Refuse to Aswer for Privilege and VIP Accounts to &quot;Not Recorded / Regular Guest&quot;</description>
    <formula>IF(NOT(ISBLANK(AccountId)) &amp;&amp; (ISPICKVAL(Mode_of_Transport__c, &apos;Refuse to Answer&apos;) || ISBLANK(TEXT(Mode_of_Transport__c))), IF(Account.RecordType.DeveloperName == &apos;VIP_Guest&apos;, &apos;Not Recorded / VIP Guest&apos;, &apos;Not Recorded / Privilege Guest&apos;), TEXT(Mode_of_Transport__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transport</label>
    <type>Text</type>
</CustomField>