force-app/main/default/objects/Case/fields/HFS_Used_Privilege_Code__c.field-meta.xml
<CustomField>
    <fullName>HFS_Used_Privilege_Code__c</fullName>
    <description>Displays Yes or No based on if the Guest used his Privilege QR Code for the HFS Registration</description>
    <formula>IF(Client_QR_Code__c == Account.BarcodeNumber__c, &apos;Yes&apos;, &apos;No&apos;)</formula>
    <label>Used Privilege Code for HFS?</label>
    <type>Text</type>
</CustomField>