force-app/main/default/objects/Case/fields/HFS_Was_Registered_BlackBook__c.field-meta.xml
<CustomField>
    <fullName>HFS_Was_Registered_BlackBook__c</fullName>
    <description>Field used for reporting purposes. This allows us to distinguish which Accounts were created after the HFS was requested, hence, they were registered in the system at the end of the day based on Tracked Spend</description>
    <formula>Experience_Start__c &lt; Account.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Was Registered to BlackBook</label>
    <type>Checkbox</type>
</CustomField>