force-app/main/default/objects/Case/fields/Historic_Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Historic_Close_Reason__c</fullName>
    <label>Historic Close Reason</label>
    <type>TextArea</type>
</CustomField>