force-app/main/default/objects/Case/fields/Language_on_Registration__c.field-meta.xml
<CustomField>
    <fullName>Language_on_Registration__c</fullName>
    <label>Language on Registration</label>
    <length>3</length>
    <type>Text</type>
</CustomField>