force-app/main/default/objects/Case/fields/Mode_of_Transport__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Transport__c</fullName>
    <description>how the customer came to the village today</description>
    <inlineHelpText>how the customer came to the village today</inlineHelpText>
    <label>Mode of Transport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Large Coach</fullName>
            </value>
            <value>
                <fullName>Small Coach</fullName>
            </value>
            <value>
                <fullName>Taxi</fullName>
            </value>
            <value>
                <fullName>Private Hire</fullName>
            </value>
            <value>
                <fullName>Public Bus</fullName>
            </value>
            <value>
                <fullName>Shopping Express</fullName>
            </value>
            <value>
                <fullName>Refuse to Answer</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
                <isActive>false</isActive>
                <label>Small</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>