force-app/main/default/objects/Case/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>the status of payment for the service</description>
    <inlineHelpText>the status of payment for the service</inlineHelpText>
    <label>Payment Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Payment on Collection</fullName>
            </value>
            <value>
                <fullName>Free of charge (Valet)</fullName>
            </value>
            <value>
                <fullName>Free of charge (VIP)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>