force-app/main/default/objects/Case/fields/Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Date__c</fullName>
    <description>The date the service is to be for (could be in the future for prebookings)</description>
    <inlineHelpText>The date the service is to be for (could be in the future for prebookings)</inlineHelpText>
    <label>Service Date</label>
    <type>Date</type>
</CustomField>