force-app/main/default/objects/Case/fields/Service_Guest_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Guest_ID__c</fullName>
    <description>a unique generated ID to identify the guest, and the date</description>
    <inlineHelpText>a unique generated ID to identify the guest, and the date</inlineHelpText>
    <label>Service Guest ID</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>