force-app/main/default/objects/Case/fields/Service_Guest_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Guest_Number__c</fullName>
    <description>The generated number assigned to the guest for the service for the day</description>
    <inlineHelpText>The generated number assigned to the guest for the service for the day</inlineHelpText>
    <label>Service Guest Number</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>