force-app/main/default/objects/Case/fields/Total_Bags_at_wrong_Collection_Point__c.field-meta.xml
<CustomField>
    <fullName>Total_Bags_at_wrong_Collection_Point__c</fullName>
    <label>Total Bags at wrong Collection Point</label>
    <summarizedField>Case_Item__c.Bags_at_wrong_Collection_Point__c</summarizedField>
    <summaryForeignKey>Case_Item__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>