force-app/main/default/objects/Case/fields/Total_Bags_of_the_Guest__c.field-meta.xml
<CustomField>
    <fullName>Total_Bags_of_the_Guest__c</fullName>
    <label>Total Bags of the Guest</label>
    <summarizedField>Case_Item__c.Total_Bags__c</summarizedField>
    <summaryForeignKey>Case_Item__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>