force-app/main/default/objects/Case/fields/Total_Collected_Bags_from_Guest__c.field-meta.xml
<CustomField>
    <fullName>Total_Collected_Bags_from_Guest__c</fullName>
    <label>Total Bags Delivered to Guest</label>
    <summarizedField>Case_Item__c.Total_Collected_Bags_from_Guest__c</summarizedField>
    <summaryForeignKey>Case_Item__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>