force-app/main/default/objects/Case/fields/Total_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Total_Jobs__c</fullName>
    <label>Total Jobs</label>
    <summarizedField>Case_Item__c.Total_Jobs__c</summarizedField>
    <summaryForeignKey>Case_Item__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>