force-app/main/default/objects/Case/fields/Total_Purchases_of_Guest__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchases_of_Guest__c</fullName>
    <label>Total Purchases of Guest</label>
    <summaryFilterItems>
        <field>Case_Item__c.HFS_Bag_Transfer__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Case_Item__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>