force-app/main/default/objects/Case/fields/Total_Remaining_Bags_to_Pickup_of_Guest__c.field-meta.xml
<CustomField>
    <fullName>Total_Remaining_Bags_to_Pickup_of_Guest__c</fullName>
    <label>Total Remaining Bags to Pickup</label>
    <summarizedField>Case_Item__c.Remaining_Bags_to_Pickup__c</summarizedField>
    <summaryForeignKey>Case_Item__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>