force-app/main/default/objects/Case/fields/Total_Scanned_Bags_of_Guest__c.field-meta.xml
<CustomField>
    <fullName>Total_Scanned_Bags_of_Guest__c</fullName>
    <label>Total Pickup Bags of Guest</label>
    <summarizedField>Case_Item__c.Scanned_Bags__c</summarizedField>
    <summaryForeignKey>Case_Item__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>