force-app/main/default/objects/Case/fields/Total_Spent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Spent_Amount__c</fullName>
    <label>Total Spent Amount</label>
    <summarizedField>Case_Item__c.Estimated_Spend__c</summarizedField>
    <summaryForeignKey>Case_Item__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>