force-app/main/default/objects/Case/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The village that this HFS service will be at</description>
    <inlineHelpText>The village that this HFS service will be at</inlineHelpText>
    <label>Village</label>
    <referenceTo>Village__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Shopping_Services</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>