force-app/main/default/objects/Case/fields/Was_Historically_Closed__c.field-meta.xml
<CustomField>
    <fullName>Was_Historically_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>.</description>
    <label>Was Historically Closed</label>
    <type>Checkbox</type>
</CustomField>