force-app/main/default/objects/Case/listViews/All_HFS_Case_WV.listView-meta.xml
<ListView>
    <fullName>All_HFS_Case_WV</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Payment_Status__c</columns>
    <columns>Service_Guest_Number__c</columns>
    <columns>HFS_Collection_Location__c</columns>
    <columns>CASES.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>Wertheim</value>
    </filters>
    <label>All HFS Cases</label>
    <language>en_US</language>
    <sharedTo>
        <group>Admins_group</group>
        <group>WV_HFS_Co_ordinators</group>
    </sharedTo>
</ListView>