force-app/main/default/objects/Case/listViews/All_HFS_Cases.listView-meta.xml
<ListView>
    <fullName>All_HFS_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Service_Guest_Number__c</columns>
    <columns>CASES.NAME</columns>
    <columns>HFS_Collection_Location__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Service_Guest_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL HFS Cases</label>
    <language>en_US</language>
    <sharedTo>
        <group>Admins_group</group>
    </sharedTo>
</ListView>