force-app/main/default/objects/Case/listViews/All_HFS_This_Month.listView-meta.xml
<ListView>
    <fullName>All_HFS_This_Month</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Service_Guest_Number__c</columns>
    <columns>CASES.NAME</columns>
    <columns>HFS_Collection_Location__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CREATED_DATE_DATE_ONLY</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>All HFS This Month</label>
    <language>en_US</language>
    <sharedTo>
        <group>Admins_group</group>
    </sharedTo>
</ListView>